# udpdrop

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
Doc/: design.md
include/udpdrop/: channel.hpp  config.hpp  stl.hpp  version.hpp
include/udpdrop/config/: abi_prefix.hpp  abi_suffix.hpp  config.hpp
include/udpdrop/config/abi/: msvc_prefix.hpp
include/udpdrop/config/compiler/: gnuc_compiler.hpp  msvc_compiler.hpp
include/udpdrop/config/os/: win32_os.hpp
src/udpdrop/: udpdrop.cpp
test/udpdrop/: dummy.cpp
